--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <title>Biodata Paling Keren di HTML - Afrizatul.com</title>
+    <title>Biodata</title>
     <style>
       body {
         background-color: #e8e8e8;
@@ -31,14 +31,14 @@
     </style>
   </head>
   <body>
-        <a href="https://www.kochengoren.net/"><h3 class="text-center text-success mt-3">Biodata Paling Keren di HTML - Afrizatul.com</h3></a>
+        <a href="https://www.kochengoren.net/"><h3 class="text-center text-success mt-3">Biodata Paling Keren di HTML - ekhasasi.com</h3></a>
         <!-- Isi Biodata Paling Keren di HTML disini -->
 <div class="container">
   <div class="card kartu">
     <div class="row">
       <div class="col-md-4">
       <div class="foto">
-        <img src="foto/bayuafrizatulrizki.jpg" alt="" width="200" height="auto">
+        <img src="foto/buah.jpg" alt="" width="200" height="auto">
       </div>
       </div>
       <div class="col-md-8 kertas-biodata">
@@ -51,22 +51,22 @@
             <tr>
               <td width="25%" valign="top" class="textt">Nama</td>
                 <td width="2%">:</td>
-                <td style="color: rgb(118, 157, 29); font-weight:bold">Bayu Afrizatul Rizki</td>
+                <td style="color: rgb(118, 157, 29); font-weight:bold">Ekha Sasi Ramadhani</td>
             </tr>
           <tr>
               <td class="textt">Jenis Kelamin</td>
                 <td>:</td>
-                <td>Laki-Laki</td>
+                <td>Perempuan</td>
             </tr>
           <tr>
               <td class="textt">Tempat Lahir</td>
                 <td>:</td>
-                <td>Airmolek,Riau</td>
+                <td>Sokaraja,Jateng</td>
             </tr>
           <tr>
               <td class="textt">Tanggal Lahir</td>
                 <td>:</td>
-                <td>31/08/1997</td>
+                <td>31/08/2005</td>
             </tr>
           <tr>
               <td class="textt">Fakultas</td>
